--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,8 @@
-[package]
-name = "trictrac"
-version = "0.1.0"
-edition = "2021"
+[workspace]
+resolver="2"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
-pico-args = "0.5.0"
+members = [
+  "client",
+  "server",
+  "store"
+]
