--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -6,4 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+env_logger = "0.10.0"
+log = "0.4.20"
 pico-args = "0.5.0"
+renet = "0.0.13"
