--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.75"
 bevy = { version = "0.11.3" }
 bevy_renet = "0.0.9"
 renet = "0.0.13"
