--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -9,5 +9,6 @@ edition = "2021"
 anyhow = "1.0.75"
 bevy = { version = "0.11.3" }
 bevy_renet = "0.0.9"
+bincode = "1.3.3"
 renet = "0.0.13"
 store = { path = "../store" }
