--- a/store/Cargo.toml
+++ b/store/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+base64 = "0.21.7"
 log = "0.4.20"
 rand = "0.8.5"
 serde =  { version = "1.0", features = ["derive"] }
