--- a/client_cli/Cargo.toml
+++ b/client_cli/Cargo.toml
@@ -9,5 +9,6 @@ edition = "2021"
 anyhow = "1.0.75"
 bincode = "1.3.3"
 pico-args = "0.5.0"
+pretty_assertions = "1.4.0"
 renet = "0.0.13"
 store = { path = "../store" }
