--- a/bot/Cargo.toml
+++ b/bot/Cargo.toml
@@ -1,15 +1,10 @@
 [package]
-name = "client_cli"
+name = "bot"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anyhow = "1.0.75"
-bincode = "1.3.3"
-pico-args = "0.5.0"
 pretty_assertions = "1.4.0"
-renet = "0.0.13"
 store = { path = "../store" }
-bot = { path = "../bot" }
