--- a/client_tui/Cargo.toml
+++ b/client_tui/Cargo.toml
@@ -6,9 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anyhow = "1.0.75"
+anyhow = "1.0.89"
 bincode = "1.3.3"
-crossterm = "0.27.0"
-ratatui = "0.24.0"
-renet = "0.0.13"
+crossterm = "0.28.1"
+ratatui = "0.28.1"
+# renet = "0.0.13"
 store = { path = "../store" }
