--- a/bot/Cargo.toml
+++ b/bot/Cargo.toml
@@ -7,4 +7,6 @@ edition = "2021"
 
 [dependencies]
 pretty_assertions = "1.4.0"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 store = { path = "../store" }
