remove python stuff & simple DQN implementation

--- a/store/Cargo.toml
+++ b/store/Cargo.toml
@@ -7,17 +7,14 @@ edition = "2021"
 
 [lib]
 name = "store"
-# "cdylib" is necessary to produce a shared library for Python to import from.
-# "rlib" is needed for other Rust crates to use this library
-crate-type = ["cdylib", "rlib"]
+# Only "rlib" is needed for other Rust crates to use this library
+crate-type = ["rlib"]
 
 [dependencies]
 base64 = "0.21.7"
 # provides macros for creating log messages to be used by a logger (for example env_logger)
 log = "0.4.20"
 merge = "0.1.0"
-# generate python lib to be used in AI training
-pyo3 = { version = "0.23", features = ["extension-module", "abi3-py38"] }
 rand = "0.8.5"
 serde = { version = "1.0", features = ["derive"] }
 transpose = "0.2.2"
