--- a/bot/Cargo.toml
+++ b/bot/Cargo.toml
@@ -16,3 +16,5 @@ serde_json = "1.0"
 store = { path = "../store" }
 rand = "0.8"
 env_logger = "0.10"
+burn = { version = "0.17", features = ["ndarray", "autodiff"] }
+burn-rl = { git = "https://github.com/yunjhongwu/burn-rl-examples.git", package = "burn-rl" }
