--- a/bot/Cargo.toml
+++ b/bot/Cargo.toml
@@ -13,6 +13,10 @@ path = "src/bin/train_dqn.rs"
 name = "train_burn_rl"
 path = "src/bin/train_burn_rl.rs"
 
+[[bin]]
+name = "train_dqn_full"
+path = "src/bin/train_dqn_full.rs"
+
 [dependencies]
 pretty_assertions = "1.4.0"
 serde = { version = "1.0", features = ["derive"] }
