--- a/bot/Cargo.toml
+++ b/bot/Cargo.toml
@@ -10,8 +10,8 @@ name = "train_dqn_burn"
 path = "src/dqn/burnrl/main.rs"
 
 [[bin]]
-name = "train_dqn"
-path = "src/bin/train_dqn.rs"
+name = "train_dqn_simple"
+path = "src/dqn/simple/main.rs"
 
 [dependencies]
 pretty_assertions = "1.4.0"
