--- a/bot/Cargo.toml
+++ b/bot/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [[bin]]
-name = "burn_demo"
+name = "burn_train"
 path = "src/burnrl/main.rs"
 
 [[bin]]
